--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: |
+- powershell: |
     # Generate the GitHub host URL
     $GITHUB_HOST="https://$($Build.Repository.Uri.split("/")[2])"
     echo "##vso[task.setvariable variable=GitHubHost;]$GITHUB_HOST"
