--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ variables:
 steps:
 - powershell: |
     # Generate the GitHub host URL
-    $GITHUB_HOST="https://$($Build.Repository.Uri.split("/")[2])"
+    $GITHUB_HOST="https://($Build.Repository.Uri.split("/")[2])"
     echo "##vso[task.setvariable variable=GitHubHost;]$GITHUB_HOST"
     
     # Generate Repo name in Org/Repo format and assign it to GitHubRepo
