--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ variables:
 steps:
 - powershell: |
     # Generate the GitHub host URL
-    Write-Output $Build.Repository.Uri
+    Write-Output "Repo is $(Build.Repository.Uri)"
     # $GITHUB_HOST="https://($Build.Repository.Uri.split("/")[2])"
     #echo "##vso[task.setvariable variable=GitHubHost;]$GITHUB_HOST"
     
