--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
     echo "##vso[task.setvariable variable=GitHubRepo;]$GITHUB_REPO"
     
     # Validate if all looks good
-    Write-Output "GITHUB_REPO = $GITHUB_REPO"
-    Write-Output "GITHUB_HOST = $GITHUB_HOST"
+    Write-Output "GITHUB_REPO = $(GitHubRepo)"
+    Write-Output "GITHUB_HOST = $(GitHubHost)"
     
   displayName: 'Initialise the necessary variables for Code Scanning'
