--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,8 +20,8 @@ steps:
     echo "##vso[task.setvariable variable=GitHubRepo;]$GITHUB_REPO"
     
     # DEBUG
-    Write-Output "GITHUB_REPO = $env:GitHubRepo"
-    Write-Output "GITHUB_HOST = $env:GitHubHost"
+    Write-Output "GITHUB_REPO = ${env:GitHubRepo}"
+    Write-Output "GITHUB_HOST = ${env:GitHubHost}"
     
   displayName: 'Initialise the necessary variables for Code Scanning'
 
