--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,17 +11,17 @@ steps:
 - powershell: |
     # Generate the GitHub host URL
     $GITHUB_HOST="https://"+"$(Build.Repository.Uri)".split("/")[2]
-    echo "##vso[task.setvariable variable=GitHubHost;]$GITHUB_HOST"
+    Write-Output '##vso[task.setvariable variable=GitHubHost;]$GITHUB_HOST'
     
     # Generate Repo name in Org/Repo format and assign it to GitHubRepo
     $GITHUB_ORG="$(Build.Repository.Uri)".split("/")[3]
     $GITHUB_REPO_NAME="$(Build.Repository.Uri)".split("/")[4] -replace ".git",""
     $GITHUB_REPO=$GITHUB_ORG+ "/" +$GITHUB_REPO_NAME
-    echo "##vso[task.setvariable variable=GitHubRepo;]$GITHUB_REPO"
+    Write-Output '##vso[task.setvariable variable=GitHubRepo;]$GITHUB_REPO'
     
     # DEBUG
-    Write-Output "GITHUB_REPO = ${env:GitHubRepo}"
-    Write-Output "GITHUB_HOST = ${env:GitHubHost}"
+    Write-Output "GITHUB_REPO = $(GitHubRepo)"
+    Write-Output "GITHUB_HOST = $(GitHubHost)"
     
   displayName: 'Initialise the necessary variables for Code Scanning'
 
