--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
     echo "##vso[task.setvariable variable=psJobVariable;isOutput=true]some_value"
 
 - script: |
-    echo $(psJobVariable)
+    echo "$(psJobVariable)"
 
 - powershell: |
     # Generate the GitHub host URL
