--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,34 +8,28 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: |
-    echo "Hello"
-    echo "##vso[task.setvariable variable=psJobVariable;isOutput=true]some_value"
-
-- script: |
-    echo "Build Repo Name: $(Build.Repository.Name)"
-    echo "Build Repo Provider: $(Build.Repository.Provider)"
 
 - powershell: |
-    # Generate the GitHub host URL
-    $GITHUB_HOST="https://"+"$(Build.Repository.Uri)".split("/")[2]
-    $env:TEST="hello"
-    Write-Output '##vso[task.setvariable variable=GitHubHost;isOutput=true]$GITHUB_HOST'
-    
-    # Generate Repo name in Org/Repo format and assign it to GitHubRepo
-    $GITHUB_ORG="$(Build.Repository.Uri)".split("/")[3]
-    $GITHUB_REPO_NAME="$(Build.Repository.Uri)".split("/")[4] -replace ".git",""
-    $GITHUB_REPO=$GITHUB_ORG+ "/" +$GITHUB_REPO_NAME
-    Write-Output '##vso[task.setvariable variable=GitHubRepo;isOutput=true]$GITHUB_REPO'
-    
-    # DEBUG
-    Write-Output "GITHUB_REPO = $GITHUB_REPO"
-    Write-Output "GITHUB_HOST = $GitHubHost"
-  name: setVarsStep  
-  displayName: 'Initialise the necessary variables for Code Scanning'
+    $codeql_runner_url = "https://github.com/github/codeql-action/releases/download/codeql-bundle-20210421/codeql-runner-win.exe"
+    $codeql_runner_output_file = "$PSScriptRoot\codeql-runner-win.exe"
+    try
+    {
+        $Response = Invoke-WebRequest -Uri $codeql_runner_url -OutFile $codeql_runner_output_file
+        $StatusCode = $Response.StatusCode
+        Write-Output "Download completed successfully"
+    }
+    catch
+    {
+        $StatusCode = $_.Exception.Response.StatusCode.value__
+        Write-Output "Download Failed"
+    }
+  displayName: 'Download CodeQL Runner and Binary'
 
 - powershell: |
-    Write-Output "GITHUB VAR: $(setVarsStep.GitHubRepo)"
-    Write-Output "Test is $env:TEST"
-  name: checkVars
-  displayName: 'temp'
+    GITHUB_HOST="https://$($Build.Repository.Uri.split("/")[2])"
+    $codeql_runner_output_file = "$PSScriptRoot\codeql-runner-win.exe"
+    & $codeql_runner_output_file init --repository $(Build.Repository.Name) --github-url $GITHUB_HOST --github-auth $(GITHUB_PAT)
+    # . codeql-runner/codeql-env.sh
+    # <BUILD STEPS GO HERE>
+    & $codeql_runner_output_file analyze --repository $(Build.Repository.Name) --github-url $GITHUB_HOST --github-auth $(GITHUB_PAT) --commit $(Build.SourceVersion) --ref $(Build.SourceBranch)
+  displayName: 'CodeQL Scan'
