--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ variables:
 
 steps:
 - powershell: |
-    $GITHUB_HOST="https://($(Build.Repository.Uri)).split("/")[2]"
+    $GITHUB_HOST="https://"+"$(Build.Repository.Uri)".split("/")[2]
     Write-Output "Host : $GITHUB_HOST"
     $codeql_runner_url = "https://github.com/github/codeql-action/releases/download/codeql-bundle-20210421/codeql-runner-win.exe"
     $codeql_runner_output_file = "$PSScriptRoot\codeql-runner-win.exe"
@@ -27,7 +27,7 @@ steps:
   displayName: 'Download CodeQL Runner and Binary'
 
 - powershell: |
-    $GITHUB_HOST="https://$($Build.Repository.Uri.split("/")[2])"
+    $GITHUB_HOST="https://"+"$(Build.Repository.Uri)".split("/")[2]
     $codeql_runner_output_file = "$PSScriptRoot\codeql-runner-win.exe"
     & $codeql_runner_output_file init --repository $(Build.Repository.Name) --github-url $GITHUB_HOST --github-auth $(GITHUB_PAT)
     # . codeql-runner/codeql-env.sh
